--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,16 @@ authors = [
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
-  "License :: OSI Approved :: MIT License",
+  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
   "Operating System :: OS Independent",
 ]
 dependencies = ["requests >= 2.27.1"]
 description = "A python library to access the Electricity Maps API."
 keywords = ["electricity-maps", "kfw", "api", "cloud"]
-name = "electricity-maps-api"
+name = "smart_energy.electricity_maps_api"
 readme = "README.md"
 requires-python = ">=3.7"
-version = "0.2.0"
+version = "0.1.0"
 
 [project.optional-dependencies]
 dev = ["black", "pytest", "python-dotenv", "pre-commit"]
