--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@
 attrs==22.1.0
     # via pytest
 black==22.10.0
-    # via electricity_maps_api (pyproject.toml)
+    # via green_energy_api (pyproject.toml)
 certifi==2022.9.24
     # via requests
 cfgv==3.3.1
@@ -43,17 +43,17 @@ platformdirs==2.5.4
 pluggy==1.0.0
     # via pytest
 pre-commit==2.20.0
-    # via electricity_maps_api (pyproject.toml)
+    # via green_energy_api (pyproject.toml)
 pyparsing==3.0.9
     # via packaging
 pytest==7.2.0
-    # via electricity_maps_api (pyproject.toml)
+    # via green_energy_api (pyproject.toml)
 python-dotenv==0.21.0
-    # via electricity_maps_api (pyproject.toml)
+    # via green_energy_api (pyproject.toml)
 pyyaml==6.0
     # via pre-commit
 requests==2.28.1
-    # via electricity_maps_api (pyproject.toml)
+    # via green_energy_api (pyproject.toml)
 toml==0.10.2
     # via pre-commit
 tomli==2.0.1
